// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputField component renders a field in error state - has no programmatically detectable a11y issues 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-jVLVTy {
    z-index: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dWvLOH {
    border-color: var(--colors-tonal400) !important;
    z-index: 1;
    height: 100% !important;
  }

  .c-dWvLOH:hover {
    background: var(--colors-tonal50);
  }

  .c-dWvLOH:hover svg {
    color: var(--colors-tonal400);
  }

  .c-dWvLOH svg {
    color: var(--colors-tonal300);
  }

  .c-dWvLOH:active {
    background: var(--colors-tonal100);
  }

  .c-dWvLOH:active svg {
    color: var(--colors-tonal500);
  }

  .c-dWvLOH:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-ctivzP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-ctivzP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-ctivzP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }

  .c-kOvGWL-kRqBPT-disabled-true {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kOvGWL-iuasYV-state-error {
    border-color: var(--colors-danger);
  }

  .c-PJLV-iymbh-theme-error {
    color: var(--colors-danger);
  }

  .c-hMRxhp-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }

  .c-ctivzP-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-ctivzP-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-ctivzP-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }
}

@media  {
  .c-oUmPa-fboUUB-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):hover,
  .c-oUmPa-fboUUB-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dWvLOH-iwWtoZ-css {
    border-right: none;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .c-dhzjXW-ibwGleD-css {
    border-radius: 0px;
    width: var(--sizes-6);
  }

  .c-dhzjXW-ibwGleD-css:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-dWvLOH-ihgsOSq-css {
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }

  .c-dhzjXW-ijkHUQU-css {
    margin-top: var(--space-2);
  }

  .c-hMRxhp-ijkHsGW-css {
    margin-right: var(--space-2);
  }

  .c-ctivzP-iiTbKsx-css {
    transform: translateY(var(--space-0));
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="numberInputField"
        >
          Number Input
        </label>
      </div>
      <div
        class="c-dhzjXW"
      >
        <span
          class="c-jVLVTy c-PJLV"
          data-state="closed"
          tabindex="-1"
        >
          <button
            aria-label="decrement"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-iwWtoZ-css"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 12H4"
              />
            </svg>
          </button>
        </span>
        <div
          class="c-dhzjXW c-kOvGWL c-kOvGWL-dNqCDY-size-md c-kOvGWL-iuasYV-state-error c-dhzjXW-ibwGleD-css"
        >
          <input
            aria-invalid="true"
            aria-valuemax="9007199254740991"
            aria-valuemin="0"
            aria-valuenow="0"
            class="c-ctivzP c-ctivzP-gvmVBy-size-md c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-foJWJd"
            id="numberInputField"
            inputmode="numeric"
            name="numberInputField"
            pattern="[0-9]*"
            role="spinbutton"
            type="text"
            value="0"
          />
        </div>
        <span
          class="c-jVLVTy c-PJLV"
          data-state="closed"
          tabindex="-1"
        >
          <button
            aria-label="increment"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-ihgsOSq-css"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 12H4m8-8v16"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="c-dhzjXW c-PJLV c-PJLV-iymbh-theme-error c-dhzjXW-ijkHUQU-css"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-cyeZeh-size-sm c-hMRxhp-ijkHsGW-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span
          class="c-ctivzP c-ctivzP-bndJoy-size-sm c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-ctivzP-iiTbKsx-css"
        >
          Cannot enter values less than 7
        </span>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`NumberInputField component renders a field with a disabled input - has no programmatically detectable a11y issues 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-jVLVTy {
    z-index: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dWvLOH {
    border-color: var(--colors-tonal400) !important;
    z-index: 1;
    height: 100% !important;
  }

  .c-dWvLOH:hover {
    background: var(--colors-tonal50);
  }

  .c-dWvLOH:hover svg {
    color: var(--colors-tonal400);
  }

  .c-dWvLOH svg {
    color: var(--colors-tonal300);
  }

  .c-dWvLOH:active {
    background: var(--colors-tonal100);
  }

  .c-dWvLOH:active svg {
    color: var(--colors-tonal500);
  }

  .c-dWvLOH:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-ctivzP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-ctivzP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-ctivzP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }

  .c-kOvGWL-kRqBPT-disabled-true {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-oUmPa-fboUUB-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):hover,
  .c-oUmPa-fboUUB-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dWvLOH-iwWtoZ-css {
    border-right: none;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .c-dhzjXW-ibwGleD-css {
    border-radius: 0px;
    width: var(--sizes-6);
  }

  .c-dhzjXW-ibwGleD-css:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-dWvLOH-ihgsOSq-css {
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="numberInputField"
        >
          Number Input
        </label>
      </div>
      <div
        class="c-dhzjXW"
      >
        <span
          class="c-jVLVTy c-PJLV"
          data-state="closed"
          tabindex="-1"
        >
          <button
            aria-label="decrement"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-iwWtoZ-css"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 12H4"
              />
            </svg>
          </button>
        </span>
        <div
          class="c-dhzjXW c-kOvGWL c-kOvGWL-dNqCDY-size-md c-kOvGWL-kRqBPT-disabled-true c-dhzjXW-ibwGleD-css"
        >
          <input
            aria-valuemax="9007199254740991"
            aria-valuemin="0"
            aria-valuenow="0"
            class="c-ctivzP c-ctivzP-gvmVBy-size-md c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-foJWJd"
            disabled=""
            id="numberInputField"
            inputmode="numeric"
            name="numberInputField"
            pattern="[0-9]*"
            role="spinbutton"
            type="text"
            value="0"
          />
        </div>
        <span
          class="c-jVLVTy c-PJLV"
          data-state="closed"
          tabindex="-1"
        >
          <button
            aria-label="increment"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-ihgsOSq-css"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 12H4m8-8v16"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`NumberInputField component renders a field with a number input - has no programmatically detectable a11y issues 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-jVLVTy {
    z-index: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dWvLOH {
    border-color: var(--colors-tonal400) !important;
    z-index: 1;
    height: 100% !important;
  }

  .c-dWvLOH:hover {
    background: var(--colors-tonal50);
  }

  .c-dWvLOH:hover svg {
    color: var(--colors-tonal400);
  }

  .c-dWvLOH svg {
    color: var(--colors-tonal300);
  }

  .c-dWvLOH:active {
    background: var(--colors-tonal100);
  }

  .c-dWvLOH:active svg {
    color: var(--colors-tonal500);
  }

  .c-dWvLOH:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-ctivzP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-ctivzP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-ctivzP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }
}

@media  {
  .c-oUmPa-fboUUB-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):hover,
  .c-oUmPa-fboUUB-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dWvLOH-iwWtoZ-css {
    border-right: none;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .c-dhzjXW-ibwGleD-css {
    border-radius: 0px;
    width: var(--sizes-6);
  }

  .c-dhzjXW-ibwGleD-css:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-dWvLOH-ihgsOSq-css {
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="numberInputField"
        >
          Number Input
        </label>
      </div>
      <div
        class="c-dhzjXW"
      >
        <span
          class="c-jVLVTy c-PJLV"
          data-state="closed"
          tabindex="-1"
        >
          <button
            aria-label="decrement"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-iwWtoZ-css"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 12H4"
              />
            </svg>
          </button>
        </span>
        <div
          class="c-dhzjXW c-kOvGWL c-kOvGWL-dNqCDY-size-md c-dhzjXW-ibwGleD-css"
        >
          <input
            aria-valuemax="9007199254740991"
            aria-valuemin="0"
            aria-valuenow="0"
            class="c-ctivzP c-ctivzP-gvmVBy-size-md c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-foJWJd"
            id="numberInputField"
            inputmode="numeric"
            name="numberInputField"
            pattern="[0-9]*"
            role="spinbutton"
            type="text"
            value="0"
          />
        </div>
        <span
          class="c-jVLVTy c-PJLV"
          data-state="closed"
          tabindex="-1"
        >
          <button
            aria-label="increment"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-ihgsOSq-css"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 12H4m8-8v16"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
